# dotfiles

./: .gitignore  README.md  configuration.nix  flake.nix  home.nix  justfile  pyproject.toml  zsh.nix
ai-agent/: AGENTS.md  default.nix  external-skills.nix  remove-conflicting-skill-directory.sh
ai-agent/profiles/: default.nix
ai-agent/rules/: common.md
ai-agent/rules/agents/: claude.md  codex.md
ai-agent/skills/brainstorming/: SKILL.md
bootstrap/: install  install-dot
cli/dotfiles_cli/: __init__.py  activation.py  apply_events.py  apply_flow.py  apply_reporter.py  cli.py  compiler.py  conflict.py  doctor.py  errors.py  hashing.py  jsonutil.py  machine.py  manifest.py  models.py  nix.py  planning.py  present.py  state.py
docs/: bootstrap-recovery-design.md  mvp-spec.md
docs/plans/: 2026-07-16-ssh-config-migration-design.md  2026-07-19-neovim-nix-diagnostics-design.md
docs/specs/: 2026-07-19-declarative-zsh-design.md
modules/ai-agent/: AGENTS.md  default.nix
modules/darwin/: common.nix  system-manifest.nix
modules/home/: common.nix  development.nix  git.nix  neovim.nix  ssh.nix
nix/: cli-agent-config.nix  cli-domain.nix  cli-system-eval.nix
nvim/: init.lua  nvim-pack-lock.json
scripts/: bootstrap.sh  cleanup-legacy.sh  proxy.zsh  rebuild.sh
tests/: test_activation.py  test_apply_flow.py  test_cli.py  test_core.py  test_nix.py  test_planning.py  test_present.py
tests/golden/: claude.json  codex.json  cursor.json
tests/shell/: run.sh  test-agent-directory-replacement.sh  test-bootstrap.sh  test-cleanup-legacy.sh
zsh/: default.nix
(+19 files in other folders)
