[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles-cli"
version = "0.1.0"
description = "Safe deployment CLI for this dotfiles repository"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dot = "dotfiles_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "cli"}

[tool.setuptools.packages.find]
where = ["cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

